[tool.poetry]
name = "api-server-mock"
version = "0.1.0"
description = "Server that provides facility for mocking api responses, specific http status as well as websocket api"
authors = ["Andrii Gerasymchuk"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
